--- a/fe-src/index.html
+++ b/fe-src/index.html
@@ -6,6 +6,7 @@
     <title>Pet Finder</title>
     <script type="module" src="./index.ts"></script>
     <link rel="stylesheet" href="./index.css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
     <div class="root-container"></div>
